[project]
name = "toetsen-schouwen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "openpyxl>=3.1.5",
  "pandas>=2.3.2",
  "pytest>=8.4.1",
  "python-dotenv>=1.1.1",
  "requests>=2.32.5",
]

[tool.pytest.ini_options]
addopts = ["--strict-markers"]
markers = ["deel_4", "deel_7", "deel_9"]
